Función para medir con Realidad Aumentada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
      permitir esto, cambiar los valores a "true" -->
     <uses-feature android:name="android.hardware.camera" android:required="false" />
     <uses-feature android:name="android.hardware.camera.front" android:required="false" />
+    <!-- ARCore utilizará la camara-->
+    <uses-feature android:name="android.hardware.camera.ar" android:required="true" />
 
 
     <application
@@ -31,6 +33,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBBsZKMWcUm2QQ4XOhPCvTv9uwIYTXVOzQ" />
+
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="required" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
