--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ playServicesMaps = "19.2.0"
 contentpager = "1.0.0"
 swiperefreshlayout = "1.1.0"
 firebaseDatabaseKtx = "22.0.0"
+preference = "1.2.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
