--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
     <uses-feature android:name="android.hardware.camera.front" android:required="false" />
     <!--Permisos de biometria-->
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <!--Permisos AR-->
+    <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
+
 
     <application
         android:allowBackup="true"
